# orcaCDE

./: .gitignore  .gitmodules  ASSETS.manifest  README.md  README.nix.md  flake.nix  nscde-wayland-runtime.cabal
assets/fontsets/: BitstreamVeraSans.fontset  BitstreamVeraSerif.fontset  Cabin.fontset  Croscore.fontset  DejaVuSans.fontset  DejaVuSerif.fontset  Fancy.fontset  Fira.fontset  FreeSans.fontset  FreeSerif.fontset  LiberationSans.fontset  LiberationSerif.fontset  LinuxBiolinum.fontset  LucidaSans.fontset  LuxiSans.fontset  LuxiSerif.fontset  Monteserrat.fontset  Roboto.fontset  TexGyrePagella.fontset  Ubuntu.fontset
doc/: README.haskell-runtime-architecture.md  README.repo-split.md
haskell/: README.md
haskell/app/: README.md  nscde-runtime.hs
haskell/src/NsCDE/Backend/Labwc/: KeybindXml.hs  MenuXml.hs  RcXml.hs  SessionFiles.hs  StyleApply.hs  Theme.hs
haskell/src/NsCDE/Domain/: Backdrop.hs  Keybinds.hs  Keymap.hs  Menu.hs  Palette.hs  PanelLayout.hs  Runtime.hs  Session.hs  Style.hs
haskell/src/NsCDE/Foundation/: Common.hs  EnvFile.hs  Paths.hs  Settings.hs
haskell/src/NsCDE/Integration/: MotifColors.hs
haskell/src/NsCDE/Parse/: AppMenus.hs  Keybindings.hs  PaletteDp.hs  StyleMgrIni.hs  StyleState.hs  Subpanels.hs
haskell/src/NsCDE/Policy/: Backdrop.hs  Keybinds.hs  Keymap.hs  Menu.hs  PanelLayout.hs  SessionPlan.hs  StyleApply.hs
haskell/src/NsCDE/Runtime/: Backend.hs  Daemon.hs  EnvFile.hs  Labwc.hs  LabwcMenu.hs  LabwcSession.hs  PanelLayout.hs  Protocol.hs  README.md  State.hs  TopicState.hs
haskell/src/NsCDE/Store/: BackdropState.hs  StyleState.hs
haskell/test/: Main.hs  README.md
legacy-shims/: fontmgr.in  getfont.in  nscde_asset_tiergen.in  nscde_backdropd.in  nscde_backend.shlib.in  nscde_fontset_migrate.in  nscde_labwc_backdropmgr.in  nscde_labwc_bg.in  nscde_labwc_colormgr.in  nscde_labwc_fontmgr.in  nscde_labwc_iconbox.in  nscde_labwc_keybindgen.in  nscde_labwc_menugen.in  nscde_labwc_pagerd.in  nscde_labwc_paneld.in  nscde_labwc_stylemgr.in  nscde_labwc_sysaction.in  nscde_labwc_sysinfo.in  nscde_labwc_taskd.in  nscde_labwc_theme.in  nscde_labwc_toplevel.in  nscde_labwc_windowmgr.in  nscde_labwc_wsm.in  nscde_runtime_client.py.in  nscde_sessiond.in  nscde_style_state.shlib.in  nscde_stylemgr.in
lib/python/: Globals.py  MiscFun.py  MotifColors.py  Opts.py  Theme.py  ThemeGtk.py
nix/: README.md
nix/modules/: README.md  reference-labwc-session-env.nix  reference-panel-layout.nix
nix/wrappers/: README.md
src/nscde_backdropd/: nscde_backdropd.c
src/nscde_common/: nscde-pixel-icon.c  nscde-pixel-icon.h
src/nscde_pagerd/: Makefile.am  nscde_pagerd.c
src/nscde_paneld/: Makefile.am  nscde-pixel-icon.c  nscde-pixel-icon.h  nscde_paneld.c
src/nscde_toplevel/: Makefile.am  nscde_toplevel.c
src/nscde_wayland_common/: README.md  panel-layout-contract.c  panel-layout-contract.h  runtime-client.c  runtime-client.h
tools/: check-launcher.sh  check-runtime.sh  nscde_labwc_keybindgen_legacy.ksh  run-nscde-labwc-nested.sh  sync-from-nscde.sh
xdg/wayland-sessions/: nscde-labwc.desktop
