cabal-version:      2.4
name:               nscde-wayland-runtime
version:            0.1.0.0
build-type:         Simple

library
  hs-source-dirs:      haskell/src
  exposed-modules:
      NsCDE.Backend.Labwc.KeybindXml
    , NsCDE.Backend.Labwc.MenuXml
    , NsCDE.Backend.Labwc.RcXml
    , NsCDE.Backend.Labwc.SessionFiles
    , NsCDE.Domain.Keybinds
    , NsCDE.Domain.Menu
    , NsCDE.Domain.PanelLayout
    , NsCDE.Domain.Runtime
    , NsCDE.Domain.Session
    , NsCDE.Foundation.Common
    , NsCDE.Foundation.EnvFile
    , NsCDE.Foundation.Paths
    , NsCDE.Foundation.Settings
    , NsCDE.Parse.AppMenus
    , NsCDE.Parse.Keybindings
    , NsCDE.Parse.PaletteDp
    , NsCDE.Parse.Subpanels
    , NsCDE.Policy.Keybinds
    , NsCDE.Policy.Menu
    , NsCDE.Policy.PanelLayout
    , NsCDE.Policy.SessionPlan
    , NsCDE.Runtime.Daemon
    , NsCDE.Runtime.Protocol
    , NsCDE.Runtime.State
  build-depends:
      base >=4.14 && <5
    , network
    , process
    , directory
    , filepath
    , unix
  default-language:    Haskell2010
  ghc-options:         -Wall

executable nscde-runtime
  main-is:             nscde-runtime.hs
  hs-source-dirs:      haskell/app
  build-depends:
      base >=4.14 && <5
    , network
    , process
    , directory
    , filepath
    , nscde-wayland-runtime
    , unix
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite runtime-tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      haskell/test
  build-depends:
      base >=4.14 && <5
    , HUnit
    , network
    , nscde-wayland-runtime
    , process
    , unix
  default-language:    Haskell2010
  ghc-options:         -Wall
